created js file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div id="search-result"></div>
     <button id="show-more-btn">Show more</button>
 
+    <script src="script.js"></script>
+
 </body>
 
 </html>
