--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>image search engine</h1>
-    <form id="serch-form">
+    <form id="search-form">
         <input type="text" id="search-box" placeholder="Search anything here...">
         <button>Search</button>
     </form>
